Criando Modelo de Kalman

--- a/src/fusion.ipynb
+++ b/src/fusion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "059607fc",
    "metadata": {},
    "outputs": [],
@@ -28,11 +28,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class KalmanFusion:\n",
+    "    def __init__(self, Q=0.01, R=0.1):\n",
+    "        \"\"\"\n",
+    "        Q: variância do processo (incerteza do modelo GNN)\n",
+    "        R: variância da medida (incerteza dos estimadores heurísticos)\n",
+    "        \"\"\"\n",
+    "        self.Q = Q  # Ruído do processo\n",
+    "        self.R = R  # Ruído da medida\n",
+    "        self.x = None  # Estado estimado (probabilidade/custo fundido)\n",
+    "        self.P = 1.0  # Covariância inicial\n",
+    "\n",
+    "    def update(self, model_prob, heuristics_cost):\n",
+    "        \"\"\"\n",
+    "        model_prob: saída do modelo (probabilidade do GNN [0-1])\n",
+    "        heuristics_cost: custo heurístico (normalizado entre 0-1)\n",
+    "        \"\"\"\n",
+    "        # Previsão\n",
+    "        if self.x is None:\n",
+    "            self.x = model_prob  # Inicializa com o modelo\n",
+    "        x_pred = self.x\n",
+    "        P_pred = self.P + self.Q\n",
+    "\n",
+    "        # Medida\n",
+    "        z = heuristics_cost\n",
+    "\n",
+    "        # Ganho de Kalman\n",
+    "        K = P_pred / (P_pred + self.R)\n",
+    "\n",
+    "        # Atualização do estado\n",
+    "        self.x = x_pred + K * (z - x_pred)\n",
+    "\n",
+    "        # Atualização da incerteza\n",
+    "        self.P = (1 - K) * P_pred\n",
+    "\n",
+    "        return self.x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,11 +80,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0b2b91d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Probabilidade do modelo (sua saída de inferência)\n",
+    "prob_model = 0.9974  # do GNN\n",
+    "\n",
+    "# Heurísticas → vamos normalizar um exemplo fictício\n",
+    "# (quanto mais alto, pior o link)\n",
+    "RSSI = -85   # dBm (RSSI fraco → custo alto)\n",
+    "ETX = 3.0    # quanto maior, pior\n",
+    "delay = 20   # ms (quanto menor, melhor)\n",
+    "loss = 0.2   # 20% de perdas\n",
+    "\n",
+    "# Normalização simples (0-1) → você pode ajustar melhor\n",
+    "rssi_cost = min(1.0, max(0.0, (-(RSSI) - 60) / 40))   # -60 dBm → bom, -100 → ruim\n",
+    "etx_cost = min(1.0, ETX / 10)  \n",
+    "delay_cost = min(1.0, delay / 100)  \n",
+    "loss_cost = min(1.0, loss)  \n",
+    "\n",
+    "heuristic_cost = (rssi_cost + etx_cost + delay_cost + loss_cost) / 4\n",
+    "\n",
+    "# Fusão via Kalman\n",
+    "kf = KalmanFusion(Q=0.01, R=0.05)\n",
+    "fused_cost = kf.update(prob_model, heuristic_cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b5c4b0e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilidade do modelo: 0.9974\n",
+      "Custo heurístico normalizado: 0.3312\n",
+      "Custo fundido (Kalman): 0.3627\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Probabilidade do modelo: {prob_model:.4f}\")\n",
+    "print(f\"Custo heurístico normalizado: {heuristic_cost:.4f}\")\n",
+    "print(f\"Custo fundido (Kalman): {fused_cost:.4f}\")"
+   ]
   }
  ],
  "metadata": {
@@ -58,7 +138,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
