--- a/src/fusion.ipynb
+++ b/src/fusion.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
@@ -39,10 +39,10 @@
     "        Q: variância do processo (incerteza do modelo GNN)\n",
     "        R: variância da medida (incerteza dos estimadores heurísticos)\n",
     "        \"\"\"\n",
-    "        self.Q = Q  # Ruído do processo\n",
-    "        self.R = R  # Ruído da medida\n",
+    "        self.Q = Q     # Ruído do processo\n",
+    "        self.R = R     # Ruído da medida\n",
     "        self.x = None  # Estado estimado (probabilidade/custo fundido)\n",
-    "        self.P = 1.0  # Covariância inicial\n",
+    "        self.P = 1.0   # Covariância inicial\n",
     "\n",
     "    def update(self, model_prob, heuristics_cost):\n",
     "        \"\"\"\n",
@@ -51,7 +51,7 @@
     "        \"\"\"\n",
     "        # Previsão\n",
     "        if self.x is None:\n",
-    "            self.x = model_prob  # Inicializa com o modelo\n",
+    "            self.x = model_prob\n",
     "        x_pred = self.x\n",
     "        P_pred = self.P + self.Q\n",
     "\n",
@@ -80,23 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0b2b91d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Probabilidade do modelo (sua saída de inferência)\n",
-    "prob_model = 0.9699  # do GNN\n",
+    "# Probabilidade do modelo GNN\n",
+    "prob_model = 0.9699\n",
     "\n",
-    "# Heurísticas → vamos normalizar um exemplo fictício\n",
-    "# (quanto mais alto, pior o link)\n",
+    "# Heurísticas \n",
     "RSSI = -85   # dBm (RSSI fraco → custo alto)\n",
-    "ETX = 3.0    # quanto maior, pior\n",
+    "ETX = 3.0    # inteiro (quanto maior, pior)\n",
     "delay = 20   # ms (quanto menor, melhor)\n",
     "loss = 0.2   # 20% de perdas\n",
     "\n",
-    "# Normalização simples (0-1) → você pode ajustar melhor\n",
-    "rssi_cost = min(1.0, max(0.0, (-(RSSI) - 60) / 40))   # -60 dBm → bom, -100 → ruim\n",
+    "# Normalização simples (0-1) \n",
+    "rssi_cost = min(1.0, max(0.0, (-(RSSI) - 60) / 40)) # -60 dBm → bom, -100 → ruim\n",
     "etx_cost = min(1.0, ETX / 10)  \n",
     "delay_cost = min(1.0, delay / 100)  \n",
     "loss_cost = min(1.0, loss)  \n",
