--- a/src/fusion.ipynb
+++ b/src/fusion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "059607fc",
    "metadata": {},
    "outputs": [],
@@ -28,30 +28,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class KalmanFusion:\n",
-    "    def __init__(self, Q=0.01, R=0.1):\n",
-    "        \"\"\"\n",
-    "        Q: variância do processo (incerteza do modelo GNN)\n",
-    "        R: variância da medida (incerteza dos estimadores heurísticos)\n",
-    "        \"\"\"\n",
-    "        self.Q = Q     # Ruído do processo\n",
-    "        self.R = R     # Ruído da medida\n",
-    "        self.x = None  # Estado estimado (probabilidade/custo fundido)\n",
-    "        self.P = 1.0   # Covariância inicial\n",
+    "import numpy as np\n",
     "\n",
-    "    def update(self, model_prob, heuristics_cost):\n",
+    "class KalmanFusion3C:\n",
+    "    def __init__(self, Q=0.01, R=0.1, weights=(0.0, 0.5, 1.0)):\n",
     "        \"\"\"\n",
-    "        model_prob: saída do modelo (probabilidade do GNN [0-1])\n",
-    "        heuristics_cost: custo heurístico (normalizado entre 0-1)\n",
+    "        Filtro de Kalman 1D para fusão de probabilidade de 3 classes + heurísticas.\n",
+    "\n",
+    "        Args:\n",
+    "            Q: variância do processo (incerteza do modelo GNN)\n",
+    "            R: variância da medida (incerteza dos estimadores heurísticos)\n",
+    "            weights: tupla de pesos para converter (baixa, media, alta) em score contínuo\n",
+    "                     padrão = (0, 0.5, 1)\n",
     "        \"\"\"\n",
-    "        # Previsão\n",
+    "        self.Q = Q\n",
+    "        self.R = R\n",
+    "        self.weights = weights\n",
+    "        self.x = None  # estado estimado (score fundido)\n",
+    "        self.P = 1.0   # covariância inicial\n",
+    "\n",
+    "    def _probs_to_score(self, probs):\n",
+    "        \"\"\"\n",
+    "        Converte dict {'baixa':p1,'media':p2,'alta':p3} em score contínuo [0,1].\n",
+    "        \"\"\"\n",
+    "        w_baixa, w_media, w_alta = self.weights\n",
+    "        return (\n",
+    "            w_baixa * probs.get(\"baixa\", 0.0) +\n",
+    "            w_media * probs.get(\"media\", 0.0) +\n",
+    "            w_alta  * probs.get(\"alta\", 0.0)\n",
+    "        )\n",
+    "\n",
+    "    def update(self, probs_dict, heuristics_cost):\n",
+    "        \"\"\"\n",
+    "        Atualiza o estado do filtro.\n",
+    "\n",
+    "        Args:\n",
+    "            probs_dict: dict com {'baixa':p1,'media':p2,'alta':p3}\n",
+    "            heuristics_cost: custo heurístico normalizado em [0,1]\n",
+    "        \n",
+    "        Returns:\n",
+    "            valor fundido (score entre 0 e 1)\n",
+    "        \"\"\"\n",
+    "        # Converte as probabilidades em score\n",
+    "        model_score = self._probs_to_score(probs_dict)\n",
+    "\n",
+    "        # Predição\n",
     "        if self.x is None:\n",
-    "            self.x = model_prob\n",
+    "            self.x = model_score\n",
     "        x_pred = self.x\n",
     "        P_pred = self.P + self.Q\n",
     "\n",
@@ -67,7 +95,13 @@
     "        # Atualização da incerteza\n",
     "        self.P = (1 - K) * P_pred\n",
     "\n",
-    "        return self.x"
+    "        return self.x\n",
+    "\n",
+    "    def fused_cost(self):\n",
+    "        \"\"\"\n",
+    "        Retorna o custo final (transforma score em custo aditivo).\n",
+    "        \"\"\"\n",
+    "        return -np.log(self.x + 1e-6)"
    ]
   },
   {
@@ -80,36 +114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0b2b91d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Probabilidade do modelo GNN\n",
-    "prob_model = 0.9699\n",
+    "# Saída do modelo\n",
+    "probs = {'baixa': 0.163, 'media': 0.307, 'alta': 0.529}\n",
     "\n",
-    "# Heurísticas \n",
-    "RSSI = -85   # dBm (RSSI fraco → custo alto)\n",
-    "ETX = 3.0    # inteiro (quanto maior, pior)\n",
-    "delay = 20   # ms (quanto menor, melhor)\n",
-    "loss = 0.2   # 20% de perdas\n",
+    "# Exemplo de custo heurístico normalizado (RSSI/ETX/Delay/Perda)\n",
+    "heuristics_cost = 0.35\n",
     "\n",
-    "# Normalização simples (0-1) \n",
-    "rssi_cost = min(1.0, max(0.0, (-(RSSI) - 60) / 40)) # -60 dBm → bom, -100 → ruim\n",
-    "etx_cost = min(1.0, ETX / 10)  \n",
-    "delay_cost = min(1.0, delay / 100)  \n",
-    "loss_cost = min(1.0, loss)  \n",
+    "# Instancia filtro\n",
+    "kf = KalmanFusion3C(Q=0.01, R=0.05)\n",
     "\n",
-    "heuristic_cost = (rssi_cost + etx_cost + delay_cost + loss_cost) / 4\n",
-    "\n",
-    "# Fusão via Kalman\n",
-    "kf = KalmanFusion(Q=0.01, R=0.05)\n",
-    "fused_cost = kf.update(prob_model, heuristic_cost)"
+    "# Atualiza com dados\n",
+    "fused_value = kf.update(probs, heuristics_cost)\n",
+    "fused_cost = kf.fused_cost()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "b5c4b0e5",
    "metadata": {},
    "outputs": [
@@ -117,16 +143,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidade do modelo: 0.9699\n",
-      "Custo heurístico normalizado: 0.3312\n",
-      "Custo fundido (Kalman): 0.3614\n"
+      "Score fundido (Kalman): 0.3656839622641509\n",
+      "Custo final: 1.0059830750874976\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Probabilidade do modelo: {prob_model:.4f}\")\n",
-    "print(f\"Custo heurístico normalizado: {heuristic_cost:.4f}\")\n",
-    "print(f\"Custo fundido (Kalman): {fused_cost:.4f}\")"
+    "print(\"Score fundido (Kalman):\", fused_value)\n",
+    "print(\"Custo final:\", fused_cost)"
    ]
   }
  ],
