Alterando filtro de kalman

--- a/src/fusion.ipynb
+++ b/src/fusion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "059607fc",
    "metadata": {},
    "outputs": [],
@@ -28,34 +28,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "class KalmanFusion:\n",
+    "    \"\"\"\n",
+    "    Fusão escalar (Kalman) para RADNET:\n",
+    "      - Medidas: score do modelo (via probs) com N heurísticas normalizadas [0,1]\n",
+    "      - R por-fonte (modelo e cada heurística)\n",
+    "      - R adaptativo opcional por resíduo (EWMA)\n",
+    "      - Saídas auxiliares: p_forward, contention window (CW), rate\n",
     "\n",
-    "class KalmanFusion3C:\n",
-    "    def __init__(self, Q=0.01, R=0.1, weights=(0.0, 0.5, 1.0)):\n",
-    "        \"\"\"\n",
-    "        Filtro de Kalman 1D para fusão de probabilidade de 3 classes + heurísticas.\n",
+    "    Interpretação:\n",
+    "      - 0=ótimo\n",
+    "      - 1=péssimo\n",
+    "    \"\"\"\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        Q=0.01,                  # Variância do processo (quão rápido o \"verdadeiro\" estado pode mudar)\n",
+    "        R_model=0.10,            # Variância da medida do modelo (quanto desconfiamos do GNN)\n",
+    "        R_feats=None,            # Dict de variâncias por métrica heurística: {\"etx\":0.08,\"delay\":0.05,...}\n",
+    "        weights=(0.0, 0.5, 1.0), # Pesos p/ converter classes -> score: baixa, média, alta\n",
+    "        adapt_R=False,           # Se True, ajusta R online via resíduo (fonte mais ruidosa pesa menos)\n",
+    "        resid_beta=0.15,         # Suavização EWMA para o R adaptativo (0..1) – maior = adapta mais rápido\n",
+    "        p_bounds=(0.05, 0.95),   # Limites (min,max) para probabilidade de rebroadcast (evita extremos)\n",
+    "        cw_bounds=(16, 1024),    # Limites (min,max) da janela de contenção (CW) para backoff/jitter\n",
+    "        rate_max=1.0             # Taxa normalizada máxima (shaper); rate = rate_max * (1 - x)\n",
+    "    ):\n",
+    "        self.Q = float(Q)                   # Variância do processo: quão rápido o estado \"real\" pode mudar (↑Q = mais responsivo, menos suave)\n",
+    "        self.R_model = float(R_model)       # Variância da medida do MODELO (GNN): ↑R_model = menos peso para o modelo na fusão\n",
+    "        self.R_feats = dict(R_feats or {})  # Dicionário de variâncias das heurísticas por métrica (ex.: {\"etx\":0.08,...});\n",
+    "        self.weights = tuple(weights)       # Pesos para converter probs de 3 classes -> score contínuo (baixa, média, alta)\n",
+    "        self.adapt_R = bool(adapt_R)        # Liga/desliga R adaptativo (ajuste online das variâncias via resíduos)\n",
+    "        self.resid_beta = float(resid_beta) # Fator EWMA (0..1) para suavizar a atualização do R adaptativo (↑ = adapta mais rápido)\n",
     "\n",
-    "        Args:\n",
-    "            Q: variância do processo (incerteza do modelo GNN)\n",
-    "            R: variância da medida (incerteza dos estimadores heurísticos)\n",
-    "            weights: tupla de pesos para converter (baixa, media, alta) em score contínuo\n",
-    "                     padrão = (0, 0.5, 1)\n",
-    "        \"\"\"\n",
-    "        self.Q = Q\n",
-    "        self.R = R\n",
-    "        self.weights = weights\n",
-    "        self.x = None  # estado estimado (score fundido)\n",
-    "        self.P = 1.0   # covariância inicial\n",
+    "        # Estado do Kalman\n",
+    "        self.x = None          # estado (score fundido) em [0,1]\n",
+    "        self.P = 1.0           # covariância inicial\n",
     "\n",
+    "        # Controles\n",
+    "        self.p_min, self.p_max = p_bounds       # Limites [min,max] p/ prob. de rebroadcast (clamp de p_forward).\n",
+    "        self.cw_min, self.cw_max = cw_bounds    # Limites [min,max] da contention window/backoff (score↑ ⇒ CW↑).\n",
+    "        self.rate_max = rate_max                # Teto da taxa normalizada; rate = rate_max * (1 - score).\n",
+    "\n",
+    "        # Sanidade\n",
+    "        self.p_min, self.p_max = float(self.p_min), float(self.p_max)   # Garante tipos float para os limites de p_forward (clamp numérico consistente).\n",
+    "        self.cw_min, self.cw_max = int(self.cw_min), int(self.cw_max)   # Garante tipos int para CW (backoff em valores inteiros).\n",
+    "\n",
+    "    # -------- utilidades de medida --------\n",
     "    def _probs_to_score(self, probs):\n",
-    "        \"\"\"\n",
-    "        Converte dict {'baixa':p1,'media':p2,'alta':p3} em score contínuo [0,1].\n",
-    "        \"\"\"\n",
+    "        \"\"\"Converte {'baixa':p1,'media':p2,'alta':p3} -> score contínuo [0,1].\"\"\"\n",
     "        w_baixa, w_media, w_alta = self.weights\n",
     "        return (\n",
     "            w_baixa * probs.get(\"baixa\", 0.0) +\n",
@@ -63,45 +87,93 @@
     "            w_alta  * probs.get(\"alta\", 0.0)\n",
     "        )\n",
     "\n",
-    "    def update(self, probs_dict, heuristics_cost):\n",
+    "    def _combine_measures(self, measures, variances):\n",
     "        \"\"\"\n",
-    "        Atualiza o estado do filtro.\n",
-    "\n",
-    "        Args:\n",
-    "            probs_dict: dict com {'baixa':p1,'media':p2,'alta':p3}\n",
-    "            heuristics_cost: custo heurístico normalizado em [0,1]\n",
-    "        \n",
-    "        Returns:\n",
-    "            valor fundido (score entre 0 e 1)\n",
+    "        Combina medidas escalares independentes por média ponderada\n",
+    "        com pesos = 1/variância. Retorna (z_comb, R_comb).\n",
     "        \"\"\"\n",
-    "        # Converte as probabilidades em score\n",
-    "        model_score = self._probs_to_score(probs_dict)\n",
+    "        inv_vars = [1.0/v for v in variances]\n",
+    "        s = sum(inv_vars)\n",
+    "        z_comb = sum(m*w for m, w in zip(measures, inv_vars)) / s\n",
+    "        R_comb = 1.0 / s\n",
+    "        return z_comb, R_comb\n",
     "\n",
-    "        # Predição\n",
+    "    # -------- passo de atualização --------\n",
+    "    def update(self, probs_dict, feats_dict):\n",
+    "        \"\"\"\n",
+    "        probs_dict: {'baixa':..,'media':..,'alta':..}\n",
+    "        feats_dict: {'etx':0..1,'delay':0..1,'busy':0..1,'queue':0..1, ...} normalizados\n",
+    "        \"\"\"\n",
+    "        # 1) Construção das medidas\n",
+    "        z_model = float(self._probs_to_score(probs_dict))\n",
+    "        measures = [z_model]\n",
+    "        variances = [self.R_model]\n",
+    "\n",
+    "        # ordena chaves p/ determinismo\n",
+    "        for k in sorted(feats_dict.keys()):\n",
+    "            measures.append(float(feats_dict[k]))\n",
+    "            # se não tiver R declarado, assume 0.1 (neutro)\n",
+    "            variances.append(float(self.R_feats.get(k, 0.10)))\n",
+    "\n",
+    "        # 2) Predição\n",
     "        if self.x is None:\n",
-    "            self.x = model_score\n",
+    "            # inicializa com média simples das medidas\n",
+    "            self.x = float(np.mean(measures))\n",
     "        x_pred = self.x\n",
     "        P_pred = self.P + self.Q\n",
     "\n",
-    "        # Medida\n",
-    "        z = heuristics_cost\n",
+    "        # 3) Combinação das medidas (equivalente a uma única com R_comb)\n",
+    "        z_comb, R_comb = self._combine_measures(measures, variances)\n",
     "\n",
-    "        # Ganho de Kalman\n",
-    "        K = P_pred / (P_pred + self.R)\n",
+    "        # 4) Ganho de Kalman\n",
+    "        K = P_pred / (P_pred + R_comb)\n",
     "\n",
-    "        # Atualização do estado\n",
-    "        self.x = x_pred + K * (z - x_pred)\n",
+    "        # 5) Atualização do estado\n",
+    "        x_new = x_pred + K * (z_comb - x_pred)\n",
+    "        self.x = float(np.clip(x_new, 0.0, 1.0))\n",
     "\n",
-    "        # Atualização da incerteza\n",
-    "        self.P = (1 - K) * P_pred\n",
+    "        # 6) Atualização da incerteza\n",
+    "        self.P = (1.0 - K) * P_pred\n",
+    "\n",
+    "        # 7) R adaptativo por resíduo (opcional)\n",
+    "        if self.adapt_R:\n",
+    "            # resíduo por-fonte: e_i = medida_i - x (estado pós-update)\n",
+    "            e = [m - self.x for m in measures]\n",
+    "            # atualiza variâncias como EWMA dos resíduos quadráticos\n",
+    "            # não deixa cair abaixo de um piso numérico\n",
+    "            eps = 1e-4\n",
+    "            # modelo\n",
+    "            self.R_model = max(\n",
+    "                (1 - self.resid_beta) * self.R_model + self.resid_beta * (e[0]**2),\n",
+    "                eps\n",
+    "            )\n",
+    "            # heurísticas\n",
+    "            for idx, k in enumerate(sorted(feats_dict.keys()), start=1):\n",
+    "                r_old = self.R_feats.get(k, 0.10)\n",
+    "                r_new = max((1 - self.resid_beta) * r_old + self.resid_beta * (e[idx]**2), eps)\n",
+    "                self.R_feats[k] = r_new\n",
     "\n",
     "        return self.x\n",
     "\n",
     "    def fused_cost(self):\n",
+    "        \"\"\"Custo aditivo (log), protege contra 0.\"\"\"\n",
+    "        return -np.log(self.x + 1e-6)\n",
+    "\n",
+    "    def controls(self, score=None):\n",
     "        \"\"\"\n",
-    "        Retorna o custo final (transforma score em custo aditivo).\n",
+    "        Mapeia score parâmetros de controle para RADNET:\n",
+    "          - p_forward: prob. de rebroadcast (mais alto quando score é baixo)\n",
+    "          - cw: janela de contenção (maior quando score é alto)\n",
+    "          - rate: taxa normalizada (menor quando score é alto)\n",
     "        \"\"\"\n",
-    "        return -np.log(self.x + 1e-6)"
+    "        s = float(self.x if score is None else score)\n",
+    "        s = float(np.clip(s, 0.0, 1.0))\n",
+    "\n",
+    "        p_forward = np.clip(1.0 - s, self.p_min, self.p_max)\n",
+    "        cw = int(round(self.cw_min + (self.cw_max - self.cw_min) * s))\n",
+    "        rate = self.rate_max * (1.0 - s)\n",
+    "\n",
+    "        return {\"p_forward\": float(p_forward), \"cw\": cw, \"rate\": float(rate)}\n"
    ]
   },
   {
@@ -114,28 +186,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "0b2b91d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Saída do modelo\n",
+    "# Probabilidades do modelo (3 classes)\n",
     "probs = {'baixa': 0.163, 'media': 0.307, 'alta': 0.529}\n",
     "\n",
-    "# Exemplo de custo heurístico normalizado (RSSI/ETX/Delay/Perda)\n",
-    "heuristics_cost = 0.35\n",
+    "# Heurísticas normalizadas (0..1)\n",
+    "feats = {\n",
+    "    \"etx\":   0.40,\n",
+    "    \"delay\": 0.35,\n",
+    "    \"busy\":  0.55,\n",
+    "    \"queue\": 0.30,\n",
+    "}\n",
     "\n",
-    "# Instancia filtro\n",
-    "kf = KalmanFusion3C(Q=0.01, R=0.05)\n",
+    "kf = KalmanFusion(\n",
+    "    Q=0.01,\n",
+    "    R_model=0.10,\n",
+    "    R_feats={\"etx\":0.08, \"delay\":0.05, \"busy\":0.04, \"queue\":0.06},\n",
+    "    adapt_R=True,  \n",
+    "    resid_beta=0.15,\n",
+    "    p_bounds=(0.1, 0.9),\n",
+    "    cw_bounds=(16, 1024),\n",
+    "    rate_max=1.0\n",
+    ")\n",
     "\n",
-    "# Atualiza com dados\n",
-    "fused_value = kf.update(probs, heuristics_cost)\n",
-    "fused_cost = kf.fused_cost()"
+    "x = kf.update(probs, feats)\n",
+    "cost = kf.fused_cost()\n",
+    "ctrl = kf.controls()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "b5c4b0e5",
    "metadata": {},
    "outputs": [
@@ -143,20 +228,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score fundido (Kalman): 0.3656839622641509\n",
-      "Custo final: 1.0059830750874976\n"
+      "Score fundido: 0.44655265962600527\n",
+      "Custo final: 0.8061957075527024\n",
+      "Controles: {'p_forward': 0.5534473403739948, 'cw': 466, 'rate': 0.5534473403739948}\n"
      ]
     }
    ],
    "source": [
-    "print(\"Score fundido (Kalman):\", fused_value)\n",
-    "print(\"Custo final:\", fused_cost)"
+    "print(\"Score fundido:\", x)\n",
+    "print(\"Custo final:\", cost)\n",
+    "print(\"Controles:\", ctrl)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.4)",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
