--- a/src/fusion.ipynb
+++ b/src/fusion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "059607fc",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "      - Saídas auxiliares: p_forward, contention window (CW), rate\n",
     "\n",
     "    Interpretação:\n",
-    "      - 0=ótimo\n",
+    "      - 0=otimo\n",
     "      - 1=péssimo\n",
     "    \"\"\"\n",
     "    def __init__(\n",
@@ -64,20 +64,16 @@
     "        self.adapt_R = bool(adapt_R)        # Liga/desliga R adaptativo (ajuste online das variâncias via resíduos)\n",
     "        self.resid_beta = float(resid_beta) # Fator EWMA (0..1) para suavizar a atualização do R adaptativo (↑ = adapta mais rápido)\n",
     "\n",
-    "        # Estado do Kalman\n",
     "        self.x = None          # estado (score fundido) em [0,1]\n",
     "        self.P = 1.0           # covariância inicial\n",
     "\n",
-    "        # Controles\n",
     "        self.p_min, self.p_max = p_bounds       # Limites [min,max] p/ prob. de rebroadcast (clamp de p_forward).\n",
     "        self.cw_min, self.cw_max = cw_bounds    # Limites [min,max] da contention window/backoff (score↑ ⇒ CW↑).\n",
     "        self.rate_max = rate_max                # Teto da taxa normalizada; rate = rate_max * (1 - score).\n",
     "\n",
-    "        # Sanidade\n",
     "        self.p_min, self.p_max = float(self.p_min), float(self.p_max)   # Garante tipos float para os limites de p_forward (clamp numérico consistente).\n",
     "        self.cw_min, self.cw_max = int(self.cw_min), int(self.cw_max)   # Garante tipos int para CW (backoff em valores inteiros).\n",
     "\n",
-    "    # -------- utilidades de medida --------\n",
     "    def _probs_to_score(self, probs):\n",
     "        \"\"\"Converte {'baixa':p1,'media':p2,'alta':p3} -> score contínuo [0,1].\"\"\"\n",
     "        w_baixa, w_media, w_alta = self.weights\n",
@@ -98,56 +94,40 @@
     "        R_comb = 1.0 / s\n",
     "        return z_comb, R_comb\n",
     "\n",
-    "    # -------- passo de atualização --------\n",
     "    def update(self, probs_dict, feats_dict):\n",
     "        \"\"\"\n",
     "        probs_dict: {'baixa':..,'media':..,'alta':..}\n",
     "        feats_dict: {'etx':0..1,'delay':0..1,'busy':0..1,'queue':0..1, ...} normalizados\n",
     "        \"\"\"\n",
-    "        # 1) Construção das medidas\n",
     "        z_model = float(self._probs_to_score(probs_dict))\n",
     "        measures = [z_model]\n",
     "        variances = [self.R_model]\n",
     "\n",
-    "        # ordena chaves p/ determinismo\n",
     "        for k in sorted(feats_dict.keys()):\n",
     "            measures.append(float(feats_dict[k]))\n",
-    "            # se não tiver R declarado, assume 0.1 (neutro)\n",
     "            variances.append(float(self.R_feats.get(k, 0.10)))\n",
     "\n",
-    "        # 2) Predição\n",
     "        if self.x is None:\n",
-    "            # inicializa com média simples das medidas\n",
     "            self.x = float(np.mean(measures))\n",
     "        x_pred = self.x\n",
     "        P_pred = self.P + self.Q\n",
     "\n",
-    "        # 3) Combinação das medidas (equivalente a uma única com R_comb)\n",
     "        z_comb, R_comb = self._combine_measures(measures, variances)\n",
     "\n",
-    "        # 4) Ganho de Kalman\n",
     "        K = P_pred / (P_pred + R_comb)\n",
     "\n",
-    "        # 5) Atualização do estado\n",
     "        x_new = x_pred + K * (z_comb - x_pred)\n",
     "        self.x = float(np.clip(x_new, 0.0, 1.0))\n",
     "\n",
-    "        # 6) Atualização da incerteza\n",
     "        self.P = (1.0 - K) * P_pred\n",
     "\n",
-    "        # 7) R adaptativo por resíduo (opcional)\n",
     "        if self.adapt_R:\n",
-    "            # resíduo por-fonte: e_i = medida_i - x (estado pós-update)\n",
     "            e = [m - self.x for m in measures]\n",
-    "            # atualiza variâncias como EWMA dos resíduos quadráticos\n",
-    "            # não deixa cair abaixo de um piso numérico\n",
     "            eps = 1e-4\n",
-    "            # modelo\n",
     "            self.R_model = max(\n",
     "                (1 - self.resid_beta) * self.R_model + self.resid_beta * (e[0]**2),\n",
     "                eps\n",
     "            )\n",
-    "            # heurísticas\n",
     "            for idx, k in enumerate(sorted(feats_dict.keys()), start=1):\n",
     "                r_old = self.R_feats.get(k, 0.10)\n",
     "                r_new = max((1 - self.resid_beta) * r_old + self.resid_beta * (e[idx]**2), eps)\n",
@@ -156,16 +136,9 @@
     "        return self.x\n",
     "\n",
     "    def fused_cost(self):\n",
-    "        \"\"\"Custo aditivo (log), protege contra 0.\"\"\"\n",
     "        return -np.log(self.x + 1e-6)\n",
     "\n",
-    "    def controls(self, score=None):\n",
-    "        \"\"\"\n",
-    "        Mapeia score parâmetros de controle para RADNET:\n",
-    "          - p_forward: prob. de rebroadcast (mais alto quando score é baixo)\n",
-    "          - cw: janela de contenção (maior quando score é alto)\n",
-    "          - rate: taxa normalizada (menor quando score é alto)\n",
-    "        \"\"\"\n",
+    "    def controls(self, score=None):       \n",
     "        s = float(self.x if score is None else score)\n",
     "        s = float(np.clip(s, 0.0, 1.0))\n",
     "\n",
@@ -173,7 +146,7 @@
     "        cw = int(round(self.cw_min + (self.cw_max - self.cw_min) * s))\n",
     "        rate = self.rate_max * (1.0 - s)\n",
     "\n",
-    "        return {\"p_forward\": float(p_forward), \"cw\": cw, \"rate\": float(rate)}\n"
+    "        return {\"p_forward\": float(p_forward), \"cw\": cw, \"rate\": float(rate)}"
    ]
   },
   {
@@ -186,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "0b2b91d9",
    "metadata": {},
    "outputs": [],
@@ -194,12 +167,23 @@
     "# Probabilidades do modelo (3 classes)\n",
     "probs = {'baixa': 0.163, 'media': 0.307, 'alta': 0.529}\n",
     "\n",
-    "# Heurísticas normalizadas (0..1)\n",
+    "# Heurísticas\n",
+    "etx = 3.0\n",
+    "Delay = 70       # ms\n",
+    "Busy_fraction = 0.55\n",
+    "Q_cur, Q_max = 3, 10\n",
+    "\n",
+    "# Normalização\n",
+    "etx_cost   = np.clip((etx - 1) / (10 - 1), 0, 1)  # ETX_max=10\n",
+    "delay_cost = np.clip(Delay / 200, 0, 1)           \n",
+    "busy_cost  = np.clip(Busy_fraction, 0, 1)         \n",
+    "queue_cost = np.clip(Q_cur / Q_max, 0, 1)\n",
+    "\n",
     "feats = {\n",
-    "    \"etx\":   0.40,\n",
-    "    \"delay\": 0.35,\n",
-    "    \"busy\":  0.55,\n",
-    "    \"queue\": 0.30,\n",
+    "    \"etx\": etx_cost,\n",
+    "    \"delay\": delay_cost,\n",
+    "    \"busy\": busy_cost,\n",
+    "    \"queue\": queue_cost,\n",
     "}\n",
     "\n",
     "kf = KalmanFusion(\n",
@@ -220,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "b5c4b0e5",
    "metadata": {},
    "outputs": [
@@ -228,9 +212,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score fundido: 0.44655265962600527\n",
-      "Custo final: 0.8061957075527024\n",
-      "Controles: {'p_forward': 0.5534473403739948, 'cw': 466, 'rate': 0.5534473403739948}\n"
+      "Score fundido: 0.4200436004263153\n",
+      "Custo final: 0.8673943818514136\n",
+      "Controles: {'p_forward': 0.5799563995736847, 'cw': 439, 'rate': 0.5799563995736847}\n"
      ]
     }
    ],
@@ -243,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.9.6)",
+   "display_name": "venv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
