Criando datasets, models e results

--- a/src/3-kalman.ipynb
+++ b/src/3-kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "059607fc",
    "metadata": {},
    "outputs": [],
@@ -28,54 +28,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
    "source": [
     "class KalmanFusion:\n",
-    "    \"\"\"\n",
-    "    Fusão escalar (Kalman) para RADNET:\n",
-    "      - Medidas: score do modelo (via probs) com N heurísticas normalizadas [0,1]\n",
-    "      - R por-fonte (modelo e cada heurística)\n",
-    "      - R adaptativo opcional por resíduo (EWMA)\n",
-    "      - Saídas auxiliares: p_forward, contention window (CW), rate\n",
-    "\n",
-    "    Interpretação:\n",
-    "      - 0=otimo\n",
-    "      - 1=péssimo\n",
-    "    \"\"\"\n",
     "    def __init__(\n",
     "        self,\n",
-    "        Q=0.01,                  # Variância do processo (quão rápido o \"verdadeiro\" estado pode mudar)\n",
-    "        R_model=0.10,            # Variância da medida do modelo (quanto desconfiamos do GNN)\n",
-    "        R_feats=None,            # Dict de variâncias por métrica heurística: {\"etx\":0.08,\"delay\":0.05,...}\n",
-    "        weights=(0.0, 0.5, 1.0), # Pesos p/ converter classes -> score: baixa, média, alta\n",
-    "        adapt_R=False,           # Se True, ajusta R online via resíduo (fonte mais ruidosa pesa menos)\n",
-    "        resid_beta=0.15,         # Suavização EWMA para o R adaptativo (0..1) – maior = adapta mais rápido\n",
-    "        p_bounds=(0.05, 0.95),   # Limites (min,max) para probabilidade de rebroadcast (evita extremos)\n",
-    "        cw_bounds=(16, 1024),    # Limites (min,max) da janela de contenção (CW) para backoff/jitter\n",
-    "        rate_max=1.0             # Taxa normalizada máxima (shaper); rate = rate_max * (1 - x)\n",
+    "        Q=0.01,                  \n",
+    "        R_model=0.10,            \n",
+    "        R_feats=None,            \n",
+    "        weights=(0.0, 0.5, 1.0), \n",
+    "        adapt_R=False,           \n",
+    "        resid_beta=0.15,        \n",
+    "        p_bounds=(0.05, 0.95),   \n",
+    "        cw_bounds=(16, 1024),    \n",
+    "        rate_max=1.0            \n",
     "    ):\n",
-    "        self.Q = float(Q)                   # Variância do processo: quão rápido o estado \"real\" pode mudar (↑Q = mais responsivo, menos suave)\n",
-    "        self.R_model = float(R_model)       # Variância da medida do MODELO (GNN): ↑R_model = menos peso para o modelo na fusão\n",
-    "        self.R_feats = dict(R_feats or {})  # Dicionário de variâncias das heurísticas por métrica (ex.: {\"etx\":0.08,...});\n",
-    "        self.weights = tuple(weights)       # Pesos para converter probs de 3 classes -> score contínuo (baixa, média, alta)\n",
-    "        self.adapt_R = bool(adapt_R)        # Liga/desliga R adaptativo (ajuste online das variâncias via resíduos)\n",
-    "        self.resid_beta = float(resid_beta) # Fator EWMA (0..1) para suavizar a atualização do R adaptativo (↑ = adapta mais rápido)\n",
+    "        self.Q = float(Q)                   \n",
+    "        self.R_model = float(R_model)       \n",
+    "        self.R_feats = dict(R_feats or {})  \n",
+    "        self.weights = tuple(weights)       \n",
+    "        self.adapt_R = bool(adapt_R)        \n",
+    "        self.resid_beta = float(resid_beta) \n",
     "\n",
-    "        self.x = None          # estado (score fundido) em [0,1]\n",
-    "        self.P = 1.0           # covariância inicial\n",
+    "        self.x = None         \n",
+    "        self.P = 1.0           \n",
     "\n",
-    "        self.p_min, self.p_max = p_bounds       # Limites [min,max] p/ prob. de rebroadcast (clamp de p_forward).\n",
-    "        self.cw_min, self.cw_max = cw_bounds    # Limites [min,max] da contention window/backoff (score↑ ⇒ CW↑).\n",
-    "        self.rate_max = rate_max                # Teto da taxa normalizada; rate = rate_max * (1 - score).\n",
+    "        self.p_min, self.p_max = p_bounds       \n",
+    "        self.cw_min, self.cw_max = cw_bounds    \n",
+    "        self.rate_max = rate_max                \n",
     "\n",
-    "        self.p_min, self.p_max = float(self.p_min), float(self.p_max)   # Garante tipos float para os limites de p_forward (clamp numérico consistente).\n",
-    "        self.cw_min, self.cw_max = int(self.cw_min), int(self.cw_max)   # Garante tipos int para CW (backoff em valores inteiros).\n",
+    "        self.p_min, self.p_max = float(self.p_min), float(self.p_max)   \n",
+    "        self.cw_min, self.cw_max = int(self.cw_min), int(self.cw_max)   \n",
     "\n",
     "    def _probs_to_score(self, probs):\n",
-    "        \"\"\"Converte {'baixa':p1,'media':p2,'alta':p3} -> score contínuo [0,1].\"\"\"\n",
     "        w_baixa, w_media, w_alta = self.weights\n",
     "        return (\n",
     "            w_baixa * probs.get(\"baixa\", 0.0) +\n",
@@ -83,22 +71,14 @@
     "            w_alta  * probs.get(\"alta\", 0.0)\n",
     "        )\n",
     "\n",
-    "    def _combine_measures(self, measures, variances):\n",
-    "        \"\"\"\n",
-    "        Combina medidas escalares independentes por média ponderada\n",
-    "        com pesos = 1/variância. Retorna (z_comb, R_comb).\n",
-    "        \"\"\"\n",
+    "    def _combine_measures(self, measures, variances):       \n",
     "        inv_vars = [1.0/v for v in variances]\n",
     "        s = sum(inv_vars)\n",
     "        z_comb = sum(m*w for m, w in zip(measures, inv_vars)) / s\n",
     "        R_comb = 1.0 / s\n",
     "        return z_comb, R_comb\n",
     "\n",
-    "    def update(self, probs_dict, feats_dict):\n",
-    "        \"\"\"\n",
-    "        probs_dict: {'baixa':..,'media':..,'alta':..}\n",
-    "        feats_dict: {'etx':0..1,'delay':0..1,'busy':0..1,'queue':0..1, ...} normalizados\n",
-    "        \"\"\"\n",
+    "    def update(self, probs_dict, feats_dict):        \n",
     "        z_model = float(self._probs_to_score(probs_dict))\n",
     "        measures = [z_model]\n",
     "        variances = [self.R_model]\n",
@@ -151,19 +131,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd95291f",
+   "id": "76df22f4",
    "metadata": {},
    "source": [
-    "## Execução"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0b2b91d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "```\n",
     "# Probabilidades do modelo (3 classes)\n",
     "probs = {'baixa': 0.163, 'media': 0.307, 'alta': 0.529}\n",
     "\n",
@@ -199,29 +170,12 @@
     "\n",
     "x = kf.update(probs, feats)\n",
     "cost = kf.fused_cost()\n",
-    "ctrl = kf.controls()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b5c4b0e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score fundido: 0.4200436004263153\n",
-      "Custo final: 0.8673943818514136\n",
-      "Controles: {'p_forward': 0.5799563995736847, 'cw': 439, 'rate': 0.5799563995736847}\n"
-     ]
-    }
-   ],
-   "source": [
+    "ctrl = kf.controls()\n",
+    "\n",
     "print(\"Score fundido:\", x)\n",
     "print(\"Custo final:\", cost)\n",
-    "print(\"Controles:\", ctrl)"
+    "print(\"Controles:\", ctrl)\n",
+    "```"
    ]
   }
  ],
