--- a/src/4-benchmark.ipynb
+++ b/src/4-benchmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "c861d309",
    "metadata": {},
    "outputs": [],
@@ -29,105 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "0a786af4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class KalmanFusion:   \n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        Q=0.01,                  \n",
-    "        R_model=0.10,            \n",
-    "        R_feats=None,           \n",
-    "        weights=(0.0, 0.5, 1.0), \n",
-    "        adapt_R=False,          \n",
-    "        resid_beta=0.15,         \n",
-    "        p_bounds=(0.05, 0.95),   \n",
-    "        cw_bounds=(16, 1024),    \n",
-    "        rate_max=1.0            \n",
-    "    ):\n",
-    "        self.Q = float(Q)                   \n",
-    "        self.R_model = float(R_model)       \n",
-    "        self.R_feats = dict(R_feats or {})  \n",
-    "        self.weights = tuple(weights)       \n",
-    "        self.adapt_R = bool(adapt_R)        \n",
-    "        self.resid_beta = float(resid_beta) \n",
-    "\n",
-    "        self.x = None          \n",
-    "        self.P = 1.0           \n",
-    "\n",
-    "        self.p_min, self.p_max = p_bounds       \n",
-    "        self.cw_min, self.cw_max = cw_bounds    \n",
-    "        self.rate_max = rate_max                \n",
-    "\n",
-    "        self.p_min, self.p_max = float(self.p_min), float(self.p_max)   \n",
-    "        self.cw_min, self.cw_max = int(self.cw_min), int(self.cw_max)  \n",
-    "\n",
-    "    def _probs_to_score(self, probs):\n",
-    "        w_baixa, w_media, w_alta = self.weights\n",
-    "        return (\n",
-    "            w_baixa * probs.get(\"baixa\", 0.0) +\n",
-    "            w_media * probs.get(\"media\", 0.0) +\n",
-    "            w_alta  * probs.get(\"alta\", 0.0)\n",
-    "        )\n",
-    "\n",
-    "    def _combine_measures(self, measures, variances):      \n",
-    "        inv_vars = [1.0/v for v in variances]\n",
-    "        s = sum(inv_vars)\n",
-    "        z_comb = sum(m*w for m, w in zip(measures, inv_vars)) / s\n",
-    "        R_comb = 1.0 / s\n",
-    "        return z_comb, R_comb\n",
-    "\n",
-    "    def update(self, probs_dict, feats_dict):\n",
-    "        z_model = float(self._probs_to_score(probs_dict))\n",
-    "        measures = [z_model]\n",
-    "        variances = [self.R_model]\n",
-    "\n",
-    "        for k in sorted(feats_dict.keys()):\n",
-    "            measures.append(float(feats_dict[k]))\n",
-    "            variances.append(float(self.R_feats.get(k, 0.10)))\n",
-    "\n",
-    "        if self.x is None:\n",
-    "            self.x = float(np.mean(measures))\n",
-    "        x_pred = self.x\n",
-    "        P_pred = self.P + self.Q\n",
-    "\n",
-    "        z_comb, R_comb = self._combine_measures(measures, variances)\n",
-    "\n",
-    "        K = P_pred / (P_pred + R_comb)\n",
-    "\n",
-    "        x_new = x_pred + K * (z_comb - x_pred)\n",
-    "        self.x = float(np.clip(x_new, 0.0, 1.0))\n",
-    "\n",
-    "        self.P = (1.0 - K) * P_pred\n",
-    "\n",
-    "        if self.adapt_R:\n",
-    "            e = [m - self.x for m in measures]\n",
-    "            eps = 1e-4\n",
-    "            self.R_model = max(\n",
-    "                (1 - self.resid_beta) * self.R_model + self.resid_beta * (e[0]**2),\n",
-    "                eps\n",
-    "            )\n",
-    "            for idx, k in enumerate(sorted(feats_dict.keys()), start=1):\n",
-    "                r_old = self.R_feats.get(k, 0.10)\n",
-    "                r_new = max((1 - self.resid_beta) * r_old + self.resid_beta * (e[idx]**2), eps)\n",
-    "                self.R_feats[k] = r_new\n",
-    "\n",
-    "        return self.x\n",
-    "\n",
-    "    def fused_cost(self):\n",
-    "        return -np.log(self.x + 1e-6)\n",
-    "\n",
-    "    def controls(self, score=None):       \n",
-    "        s = float(self.x if score is None else score)\n",
-    "        s = float(np.clip(s, 0.0, 1.0))\n",
-    "\n",
-    "        p_forward = np.clip(1.0 - s, self.p_min, self.p_max)\n",
-    "        cw = int(round(self.cw_min + (self.cw_max - self.cw_min) * s))\n",
-    "        rate = self.rate_max * (1.0 - s)\n",
-    "\n",
-    "        return {\"p_forward\": float(p_forward), \"cw\": cw, \"rate\": float(rate)}"
+    "%run 3-kalman.ipynb"
    ]
   },
   {
@@ -140,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "035db201",
    "metadata": {},
    "outputs": [],
@@ -202,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "5bd09d07",
    "metadata": {},
    "outputs": [],
@@ -255,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "cf2a0159",
    "metadata": {},
    "outputs": [],
@@ -295,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "bbda0f9e",
    "metadata": {},
    "outputs": [
@@ -340,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "310789e7",
    "metadata": {},
    "outputs": [
