--- a/src/3-kalman.ipynb
+++ b/src/3-kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "059607fc",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3ed83233",
    "metadata": {},
    "outputs": [],
@@ -142,19 +142,16 @@
     "etx = 3.0\n",
     "Delay = 70       # ms\n",
     "Busy_fraction = 0.55\n",
-    "Q_cur, Q_max = 3, 10\n",
     "\n",
     "# Normalização\n",
     "etx_cost   = np.clip((etx - 1) / (10 - 1), 0, 1)  # ETX_max=10\n",
     "delay_cost = np.clip(Delay / 200, 0, 1)           \n",
     "busy_cost  = np.clip(Busy_fraction, 0, 1)         \n",
-    "queue_cost = np.clip(Q_cur / Q_max, 0, 1)\n",
     "\n",
     "feats = {\n",
     "    \"etx\": etx_cost,\n",
     "    \"delay\": delay_cost,\n",
-    "    \"busy\": busy_cost,\n",
-    "    \"queue\": queue_cost,\n",
+    "    \"busy\": busy_cost\n",
     "}\n",
     "\n",
     "kf = KalmanFusion(\n",
