--- a/src/3.inference.ipynb
+++ b/src/3.inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "78efbb23",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,75 @@
      "output_type": "stream",
      "text": [
       "Aresta [-55, 2, 17, 0.3] -> Classe 1 (Bom) (confiança 1.00)\n",
-      "Aresta [-85, 3.8, 70, 0.1] -> Classe 0 (Ruim) (confiança 0.94)\n"
+      "Aresta [-85, 3.8, 30, 0.1] -> Classe 1 (Bom) (confiança 0.66)\n",
+      "Aresta [-35, 1.2, 5, 0.05] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-88, 9.5, 95, 0.9] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-40, 8.2, 85, 0.8] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-87, 1.5, 8, 0.15] -> Classe 1 (Bom) (confiança 0.99)\n",
+      "Aresta [-62, 2.8, 32, 0.28] -> Classe 1 (Bom) (confiança 0.96)\n",
+      "Aresta [-58, 3.2, 28, 0.32] -> Classe 1 (Bom) (confiança 0.96)\n",
+      "Aresta [-52, 2.1, 20, 0.25] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-48, 2.5, 25, 0.22] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-50, 1.8, 22, 0.28] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-75, 5.2, 65, 0.6] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-78, 4.8, 70, 0.65] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-72, 5.5, 60, 0.58] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-45, 4.5, 15, 0.7] -> Classe 0 (Ruim) (confiança 0.56)\n",
+      "Aresta [-70, 1.9, 45, 0.2] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-60, 2.9, 30, 0.3] -> Classe 1 (Bom) (confiança 0.96)\n",
+      "Aresta [-65, 2.2, 18, 0.25] -> Classe 1 (Bom) (confiança 0.99)\n",
+      "Aresta [-50, 3.5, 35, 0.35] -> Classe 1 (Bom) (confiança 0.93)\n",
+      "Aresta [-32, 1.1, 3, 0.02] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-90, 9.8, 98, 0.95] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-38, 1.3, 7, 0.08] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-86, 8.5, 88, 0.85] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-42, 1.6, 12, 0.12] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-33, 7.2, 75, 0.8] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-82, 1.2, 8, 0.1] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-75, 8.1, 5, 0.85] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-68, 6.5, 85, 0.05] -> Classe 0 (Ruim) (confiança 0.97)\n",
+      "Aresta [-89, 2.1, 18, 0.15] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-45, 9.2, 22, 0.2] -> Classe 0 (Ruim) (confiança 0.76)\n",
+      "Aresta [-52, 2.3, 95, 0.25] -> Classe 0 (Ruim) (confiança 0.80)\n",
+      "Aresta [-48, 2.0, 20, 0.88] -> Classe 0 (Ruim) (confiança 0.52)\n",
+      "Aresta [-59, 3.0, 29, 0.29] -> Classe 1 (Bom) (confiança 0.97)\n",
+      "Aresta [-61, 2.9, 31, 0.31] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-60.5, 3.05, 30.5, 0.305] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-59.5, 2.95, 29.5, 0.295] -> Classe 1 (Bom) (confiança 0.96)\n",
+      "Aresta [-67, 4.2, 45, 0.5] -> Classe 0 (Ruim) (confiança 0.97)\n",
+      "Aresta [-64, 3.8, 42, 0.48] -> Classe 0 (Ruim) (confiança 0.89)\n",
+      "Aresta [-69, 4.5, 48, 0.52] -> Classe 0 (Ruim) (confiança 0.98)\n",
+      "Aresta [-66, 4.0, 40, 0.45] -> Classe 0 (Ruim) (confiança 0.89)\n",
+      "Aresta [-54, 1.9, 16, 0.28] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-56, 2.2, 19, 0.26] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-51, 1.7, 21, 0.24] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-49, 2.4, 18, 0.27] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-53, 2.0, 23, 0.29] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-76, 5.8, 67, 0.63] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-74, 5.1, 62, 0.59] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-77, 6.2, 72, 0.68] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-73, 5.5, 58, 0.56] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-79, 5.9, 75, 0.71] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-55, 1.8, 35, 0.6] -> Classe 1 (Bom) (confiança 0.75)\n",
+      "Aresta [-45, 4.2, 25, 0.7] -> Classe 0 (Ruim) (confiança 0.70)\n",
+      "Aresta [-65, 2.5, 18, 0.55] -> Classe 1 (Bom) (confiança 0.77)\n",
+      "Aresta [-58, 3.8, 28, 0.8] -> Classe 0 (Ruim) (confiança 0.97)\n",
+      "Aresta [-41, 5.0, 50, 0.5] -> Classe 0 (Ruim) (confiança 0.80)\n",
+      "Aresta [-80, 2.0, 20, 0.2] -> Classe 1 (Bom) (confiança 0.97)\n",
+      "Aresta [-60, 6.0, 60, 0.6] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-50, 2.5, 25, 0.25] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-57, 2.8, 28, 0.28] -> Classe 1 (Bom) (confiança 0.98)\n",
+      "Aresta [-63, 3.2, 32, 0.32] -> Classe 1 (Bom) (confiança 0.90)\n",
+      "Aresta [-58, 2.9, 31, 0.29] -> Classe 1 (Bom) (confiança 0.97)\n",
+      "Aresta [-62, 3.1, 29, 0.31] -> Classe 1 (Bom) (confiança 0.94)\n",
+      "Aresta [-30, 1.0, 1, 0.01] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-90, 10.0, 100, 1.0] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-31, 1.5, 10, 0.05] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-89, 9.0, 90, 0.9] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-44, 7.5, 12, 0.15] -> Classe 1 (Bom) (confiança 0.89)\n",
+      "Aresta [-83, 1.8, 78, 0.75] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-38, 6.8, 8, 0.82] -> Classe 0 (Ruim) (confiança 0.93)\n",
+      "Aresta [-71, 1.4, 55, 0.18] -> Classe 1 (Bom) (confiança 0.93)\n"
      ]
     }
    ],
@@ -41,9 +109,103 @@
     "scaler = joblib.load(\"../models/scaler.pkl\")\n",
     "\n",
     "# ====== Dados de teste ======\n",
+    "# [rssi, etx, delay, busy_fraction]\n",
     "test_data = [\n",
-    "    [-55, 2, 17, 0.3],  # [rssi, etx, delay, busy_fraction]\n",
-    "    [-85, 3.8, 70, 0.1] # [rssi, etx, delay, busy_fraction]\n",
+    "    # Exemplos originais\n",
+    "    [-55, 2, 17, 0.3],\n",
+    "    [-85, 3.8, 30, 0.1],\n",
+    "    [-35, 1.2, 5, 0.05],\n",
+    "    [-88, 9.5, 95, 0.9],\n",
+    "    [-40, 8.2, 85, 0.8],\n",
+    "    [-87, 1.5, 8, 0.15],\n",
+    "    [-62, 2.8, 32, 0.28],\n",
+    "    [-58, 3.2, 28, 0.32],\n",
+    "    [-52, 2.1, 20, 0.25],\n",
+    "    [-48, 2.5, 25, 0.22],\n",
+    "    [-50, 1.8, 22, 0.28],\n",
+    "    [-75, 5.2, 65, 0.6],\n",
+    "    [-78, 4.8, 70, 0.65],\n",
+    "    [-72, 5.5, 60, 0.58],\n",
+    "    [-45, 4.5, 15, 0.7],\n",
+    "    [-70, 1.9, 45, 0.2],\n",
+    "    [-60, 2.9, 30, 0.3],\n",
+    "    [-65, 2.2, 18, 0.25],\n",
+    "    [-50, 3.5, 35, 0.35],\n",
+    "    \n",
+    "    # Novos exemplos - Casos extremos adicionais\n",
+    "    [-32, 1.1, 3, 0.02],\n",
+    "    [-90, 9.8, 98, 0.95],\n",
+    "    [-38, 1.3, 7, 0.08],\n",
+    "    [-86, 8.5, 88, 0.85],\n",
+    "    [-42, 1.6, 12, 0.12],\n",
+    "    \n",
+    "    # Casos com uma métrica muito boa e outras ruins\n",
+    "    [-33, 7.2, 75, 0.8],\n",
+    "    [-82, 1.2, 8, 0.1],\n",
+    "    [-75, 8.1, 5, 0.85],\n",
+    "    [-68, 6.5, 85, 0.05],\n",
+    "    \n",
+    "    # Casos com uma métrica muito ruim e outras boas\n",
+    "    [-89, 2.1, 18, 0.15],\n",
+    "    [-45, 9.2, 22, 0.2],\n",
+    "    [-52, 2.3, 95, 0.25],\n",
+    "    [-48, 2.0, 20, 0.88],\n",
+    "    \n",
+    "    # Variações nos limites (threshold dancing)\n",
+    "    [-59, 3.0, 29, 0.29],\n",
+    "    [-61, 2.9, 31, 0.31],\n",
+    "    [-60.5, 3.05, 30.5, 0.305],\n",
+    "    [-59.5, 2.95, 29.5, 0.295],\n",
+    "    \n",
+    "    # Casos médios - nem muito bons nem muito ruins\n",
+    "    [-67, 4.2, 45, 0.5],\n",
+    "    [-64, 3.8, 42, 0.48],\n",
+    "    [-69, 4.5, 48, 0.52],\n",
+    "    [-66, 4.0, 40, 0.45],\n",
+    "    \n",
+    "    # Variações sutis em arestas boas adicionais\n",
+    "    [-54, 1.9, 16, 0.28],\n",
+    "    [-56, 2.2, 19, 0.26],\n",
+    "    [-51, 1.7, 21, 0.24],\n",
+    "    [-49, 2.4, 18, 0.27],\n",
+    "    [-53, 2.0, 23, 0.29],\n",
+    "    \n",
+    "    # Variações sutis em arestas ruins adicionais\n",
+    "    [-76, 5.8, 67, 0.63],\n",
+    "    [-74, 5.1, 62, 0.59],\n",
+    "    [-77, 6.2, 72, 0.68],\n",
+    "    [-73, 5.5, 58, 0.56],\n",
+    "    [-79, 5.9, 75, 0.71],\n",
+    "    \n",
+    "    # Casos com 2 métricas boas exatamente (limítrofes)\n",
+    "    [-55, 1.8, 35, 0.6],\n",
+    "    [-45, 4.2, 25, 0.7],\n",
+    "    [-65, 2.5, 18, 0.55],\n",
+    "    [-58, 3.8, 28, 0.8],\n",
+    "    \n",
+    "    # Casos interessantes com padrões específicos\n",
+    "    [-41, 5.0, 50, 0.5],\n",
+    "    [-80, 2.0, 20, 0.2],\n",
+    "    [-60, 6.0, 60, 0.6],\n",
+    "    [-50, 2.5, 25, 0.25],\n",
+    "    \n",
+    "    # Casos com valores próximos mas comportamentos diferentes\n",
+    "    [-57, 2.8, 28, 0.28],\n",
+    "    [-63, 3.2, 32, 0.32],\n",
+    "    [-58, 2.9, 31, 0.29],\n",
+    "    [-62, 3.1, 29, 0.31],\n",
+    "    \n",
+    "    # Casos extremos nos limites superior e inferior\n",
+    "    [-30, 1.0, 1, 0.01],\n",
+    "    [-90, 10.0, 100, 1.0],\n",
+    "    [-31, 1.5, 10, 0.05],\n",
+    "    [-89, 9.0, 90, 0.9],\n",
+    "    \n",
+    "    # Casos mistos adicionais interessantes\n",
+    "    [-44, 7.5, 12, 0.15],\n",
+    "    [-83, 1.8, 78, 0.75],\n",
+    "    [-38, 6.8, 8, 0.82],\n",
+    "    [-71, 1.4, 55, 0.18]\n",
     "]\n",
     "\n",
     "X_test = torch.tensor(scaler.transform(test_data), dtype=torch.float)\n",
