Alterando datasets, models e notebooks

--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -10,30 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss 0.6236, Train Acc 0.6174, Test Acc 0.6875\n",
-      "Epoch 10, Loss 0.2674, Train Acc 0.9690, Test Acc 0.9722\n",
-      "Epoch 20, Loss 0.0968, Train Acc 0.9806, Test Acc 0.9823\n",
-      "Epoch 30, Loss 0.0511, Train Acc 0.9850, Test Acc 0.9862\n",
-      "Epoch 40, Loss 0.0394, Train Acc 0.9866, Test Acc 0.9873\n",
+      "Epoch 0, Loss 0.6729, Train Acc 0.6171, Test Acc 0.7788\n",
+      "Epoch 10, Loss 0.2485, Train Acc 0.9735, Test Acc 0.9749\n",
+      "Epoch 20, Loss 0.0890, Train Acc 0.9807, Test Acc 0.9811\n",
+      "Epoch 30, Loss 0.0505, Train Acc 0.9856, Test Acc 0.9863\n",
+      "Epoch 40, Loss 0.0388, Train Acc 0.9881, Test Acc 0.9886\n",
       "\n",
-      "Acurácia final no conjunto de teste: 0.9882\n",
+      "Acurácia final no conjunto de teste: 0.9890\n",
       "\n",
       "Matriz de Confusão:\n",
-      "[[43684   684]\n",
-      " [  360 44052]]\n",
+      "[[29544   456]\n",
+      " [  202 29798]]\n",
       "\n",
       "Relatório de Classificação:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        Ruim       0.99      0.98      0.99     44368\n",
-      "         Bom       0.98      0.99      0.99     44412\n",
+      "        Ruim       0.99      0.98      0.99     30000\n",
+      "         Bom       0.98      0.99      0.99     30000\n",
       "\n",
-      "    accuracy                           0.99     88780\n",
-      "   macro avg       0.99      0.99      0.99     88780\n",
-      "weighted avg       0.99      0.99      0.99     88780\n",
+      "    accuracy                           0.99     60000\n",
+      "   macro avg       0.99      0.99      0.99     60000\n",
+      "weighted avg       0.99      0.99      0.99     60000\n",
       "\n",
       "Modelo salvo em ../models/mlp.pth\n",
-      "Scaler salvo em ../models/scaler.pkl\n"
+      "Modelo salvo em ../models/scaler.pkl\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
     "joblib.dump(scaler, \"../models/scaler.pkl\")\n",
     "\n",
     "print(\"Modelo salvo em ../models/mlp.pth\")\n",
-    "print(\"Scaler salvo em ../models/scaler.pkl\")"
+    "print(\"Modelo salvo em ../models/scaler.pkl\")"
    ]
   }
  ],
