--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "46ace084",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss 0.6729, Train Acc 0.6171, Test Acc 0.7788\n",
-      "Epoch 10, Loss 0.2485, Train Acc 0.9735, Test Acc 0.9749\n",
-      "Epoch 20, Loss 0.0890, Train Acc 0.9807, Test Acc 0.9811\n",
-      "Epoch 30, Loss 0.0505, Train Acc 0.9856, Test Acc 0.9863\n",
-      "Epoch 40, Loss 0.0388, Train Acc 0.9881, Test Acc 0.9886\n",
+      "Epoch 0, Loss 0.8175, Train Acc 0.4433, Test Acc 0.4887\n",
+      "Epoch 10, Loss 0.4415, Train Acc 0.9687, Test Acc 0.9695\n",
+      "Epoch 20, Loss 0.1731, Train Acc 0.9688, Test Acc 0.9702\n",
+      "Epoch 30, Loss 0.0796, Train Acc 0.9765, Test Acc 0.9776\n",
+      "Epoch 40, Loss 0.0541, Train Acc 0.9812, Test Acc 0.9820\n",
       "\n",
-      "Acurácia final no conjunto de teste: 0.9890\n",
+      "Acurácia final no conjunto de teste: 0.9842\n",
       "\n",
       "Matriz de Confusão:\n",
-      "[[29544   456]\n",
-      " [  202 29798]]\n",
+      "[[29209   791]\n",
+      " [  159 29841]]\n",
       "\n",
       "Relatório de Classificação:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        Ruim       0.99      0.98      0.99     30000\n",
-      "         Bom       0.98      0.99      0.99     30000\n",
+      "        Ruim       0.99      0.97      0.98     30000\n",
+      "         Bom       0.97      0.99      0.98     30000\n",
       "\n",
-      "    accuracy                           0.99     60000\n",
-      "   macro avg       0.99      0.99      0.99     60000\n",
-      "weighted avg       0.99      0.99      0.99     60000\n",
+      "    accuracy                           0.98     60000\n",
+      "   macro avg       0.98      0.98      0.98     60000\n",
+      "weighted avg       0.98      0.98      0.98     60000\n",
       "\n",
       "Modelo salvo em ../models/mlp.pth\n",
       "Modelo salvo em ../models/scaler.pkl\n"
@@ -48,7 +48,7 @@
     "import joblib\n",
     "\n",
     "# ====== Carregar dataset ======\n",
-    "df = pd.read_csv(\"../datasets/edges_classification.csv\")\n",
+    "df = pd.read_csv(\"../datasets/edges.csv\")\n",
     "\n",
     "X = df[[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"]].values\n",
     "y = df[\"label\"].values\n",
