--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -10,18 +10,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset salvo em ../datasets/edges_classification.csv\n",
+      "Dataset salvo em ../datasets/edges.csv\n",
       "     src   dest       rssi       etx      delay  busy_fraction  label\n",
-      "0  17868  90513 -60.350553  1.288760  25.667723       0.065734      1\n",
-      "1  94395  90619 -62.244444  8.681464  33.811496       0.946220      0\n",
-      "2  56986  37711 -70.218462  5.445555  56.551788       0.675469      0\n",
-      "3  26718  71122 -48.884880  3.164235   6.743452       0.248438      1\n",
-      "4  24282  11859 -71.839980  9.530942  73.093265       0.763770      0\n",
+      "0  11649  98198 -89.812059  3.953516  47.393523       0.675331      0\n",
+      "1   9701  73039 -34.920138  1.137908   5.068009       0.363795      1\n",
+      "2  83741  74174 -45.954925  1.345994  14.867633       0.290191      1\n",
+      "3  44902  22935 -33.217112  2.810842  13.982908       0.208661      1\n",
+      "4  10629  69697 -56.192809  1.279754   7.495858       0.159652      1\n",
       "\n",
       "Distribuição dos labels:\n",
       "label\n",
-      "1    100000\n",
       "0    100000\n",
+      "1    100000\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -94,9 +94,9 @@
     "\n",
     "df = pd.DataFrame(edges, columns=[\"src\", \"dest\", \"rssi\", \"etx\", \"delay\", \"busy_fraction\", \"label\"])\n",
     "os.makedirs(\"../datasets\", exist_ok=True)\n",
-    "df.to_csv(\"../datasets/edges_classification.csv\", index=False)\n",
+    "df.to_csv(\"../datasets/edges.csv\", index=False)\n",
     "\n",
-    "print(\"Dataset salvo em ../datasets/edges_classification.csv\")\n",
+    "print(\"Dataset salvo em ../datasets/edges.csv\")\n",
     "print(df.head())\n",
     "print(f\"\\nDistribuição dos labels:\")\n",
     "print(df['label'].value_counts())"
