Alterando nome de labels

--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "85f2754e",
    "metadata": {},
    "outputs": [
@@ -92,6 +92,7 @@
     "    \n",
     "    edges.append([src, dest, rssi, etx, delay, busy, label])\n",
     "\n",
+    "# ====== Salvar dataset ======\n",
     "df = pd.DataFrame(edges, columns=[\"src\", \"dest\", \"rssi\", \"etx\", \"delay\", \"busy_fraction\", \"label\"])\n",
     "os.makedirs(\"../datasets\", exist_ok=True)\n",
     "df.to_csv(\"../datasets/edges.csv\", index=False)\n",
